--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -20,6 +20,7 @@
             <button id="clear" onclick="deleteAll()">CLEAR ALL</button>
             <button id="settings" onclick="openSettings()">SETTINGS</button>
         </div>
+        <div class="buttons-holder"></div>
     </div>
 
     <script src="js/main.js"></script>
