--- a/app/src/main/assets/settings.html
+++ b/app/src/main/assets/settings.html
@@ -35,6 +35,7 @@
         <button id="back" onclick="openHome()">BACK</button>
         <button id="save" onclick="saveSettings()">SAVE</button>
     </div>
+    <div class="buttons-holder"></div>
 </div>
 
 <script src="js/settings.js"></script>
